@@ -31,6 +31,10 @@ The
 option indicates that the action is to correct an improper original
 image orientation, thus the recorded scanline ordering should not
 be changed.
+.PP
+If the
+.I \-v
+option is not specified, the input may be piped from stdin.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
